fix: navigation bar has misaligned styles

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -102,11 +102,6 @@ body {
     background-color: #0077b5;
 }
 
-.social-icon svg {
-    height: 1rem;
-    width: 1rem;
-}
-
 .welcome-home {
     font-size: 64px;
     animation: fadeIn 2s;
